@@ -202,8 +202,10 @@ other_search_rm = function() {
   </tr>
 
   <tr>
+  <th><tmpl_lang Tag></th>
+  <td><tmpl_var search_tag_chooser></td>
   <th><tmpl_lang Full Text Search></th>
-  <td colspan="3"><input name="search_full_text_string" value="<tmpl_var escape=html search_full_text_string>"></td>
+  <td><input name="search_full_text_string" value="<tmpl_var escape=html search_full_text_string>"></td>
   </tr>
 
   </tbody>
